--- a/src/main/resources/elementuiDoc/el-date-picker.html
+++ b/src/main/resources/elementuiDoc/el-date-picker.html
@@ -83,7 +83,7 @@
         <td>format</td>
         <td>显示在输入框中的格式</td>
         <td>string</td>
-        <td>见<a href="#/zh-CN/component/date-picker#ri-qi-ge-shi">日期格式</a></td>
+        <td>见<a href="https://element.eleme.cn/#/zh-CN/component/date-picker#ri-qi-ge-shi">日期格式</a></td>
         <td>yyyy-MM-dd</td>
     </tr>
     <tr>
